--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ button {
 	padding: 20px 40px;
 	border: 0;
 }
-@media screen and (max-height: 800px) {
+@media screen and (max-width: 800px) {
 	.nav-mob {
 		display: block;
 	}
